Cria rotas da API e modelos e parâmetros openAPI das rotas para classe Employee. Ainda não funciona por motivos de serialização
