# src/model/employee.py
@@ -1,13 +1,16 @@
-import string
-from datetime import datetime
-class employee:
+# from datetime import datetime
+# todo: datetime
 
-    def __init__(self, employee_id: int, name: string, date_of_birth: datetime, sex: string, cpf: string, password: string, type: int):
+class Employee:
+
+    def __init__(self, employee_id: int, name: str,
+                 date_of_birth: str, sex: str, cpf: str,
+                 password: str, employee_type: int):
         self.id: int = employee_id
-        self.name: string = name
-        self.date_of_birth: datetime = date_of_birth
-        self.sex: string = sex
-        self.cpf: string = cpf
-        self.password: string = password
-        self.type: int = type
+        self.name: str = name
+        self.date_of_birth: str = date_of_birth
+        self.sex: str = sex
+        self.cpf: str = cpf
+        self.password: str = password
+        self.type: int = employee_type
         
